# airtaxisim

./: rostopics.yml  rraaa.py  run-simulation.py
1 Vehicle Dynamics/vehicles/jaxguam/: Dockerfile  jaxguam.yml
1 Vehicle Dynamics/vehicles/minihawk/: Dockerfile  minihawk.yml  package.xml
2 Environment Simulation/env_sim/: Dockerfile  crazyflie.yml  env_sim.yml
3 Vehicle Intelligence/path_planner/: path_planner.yml
3 Vehicle Intelligence/path_planner/planner/: package.xml
3 Vehicle Intelligence/perception/mapper/: mapper.yml
3 Vehicle Intelligence/perception/verifiable_od/: CMakeLists.txt  Dockerfile
3 Vehicle Intelligence/perception/verifiable_od/src/lib/depth_clustering/src/depth_clustering/applications/: CMakeLists.txt
3 Vehicle Intelligence/perception/yolov5/: Dockerfile
4 Communication Interface/docker/: docker-compose.yml  enter_console.sh
4 Communication Interface/msg/: Obstacle.msg  ObstacleArray.msg  WindStatus.msg
Communication Interface/docker/: docker-compose.yml
Vehicle Dynamics/vehicles/jaxguam/: Dockerfile  jaxguam.yml
configs/: single-static-jaxguam.yml
configs/services/: jaxguam.yml  minihawk.yml  verifiable_od.yml
docker/: docker-compose.yml
docs/: conf.py  index.rst
env_sim/: Dockerfile
path_planner/trajectory_planner/: Dockerfile
perception/mapper/: Dockerfile
perception/verifiable_od/: package.xml
sim_control/script/: node_recorder.py  node_sim_start.py
vehicles/crazyflie/: CMakeLists.txt
vehicles/jaxguam/: Dockerfile  Dockerfile (copy)  Dockerfile (test version)
vehicles/minihawk/: minihawk.yml
(+27 files in other folders)
